--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,24 +24,23 @@
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <!-- META TAGS for Social Media -->
     <!-- Search Engine -->
-    <meta name="description" content="Software to connect companies for creating economic value, saving natural resources and enabling communities.">
-    <meta name="image" content="./public/images/again-cloud-commerce-company.png">
+    <meta name="description" content="Stretch your flex!">
+    <meta name="image" content="./public/images/lakran-vms-services-logo.png">
     <!-- Schema.org for Google -->
-    <meta itemprop="name" content="AGAIN | Cloud, Commerce, Company">
-    <meta itemprop="description" content="Software to connect companies for creating economic value, saving natural resources and enabling communities.">
-    <meta itemprop="image" content="./public/images/again-cloud-commerce-company.png">
+    <meta itemprop="name" content="LAKRAN VMS Services">
+    <meta itemprop="description" content="Stretch your flex!">
+    <meta itemprop="image" content="./public/images/lakran-vms-services-logo.png">
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="AGAIN | Cloud, Commerce, Company">
-    <meta name="twitter:description" content="Software to connect companies for creating economic value, saving natural resources and enabling communities.">
-    <meta name="twitter:site" content="@againbylakran">
-    <meta name="twitter:image:src" content="./public/images/screenshot.png">
+    <meta name="twitter:title" content="LAKRAN VMS Services">
+    <meta name="twitter:description" content="Stretch your flex!">
+    <meta name="twitter:image:src" content="./public/images/lakran-vms-services-logo.png">
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-    <meta name="og:title" content="AGAIN | Cloud, Commerce, Company">
-    <meta name="og:description" content="Software to connect companies for creating economic value, saving natural resources and enabling communities.">
-    <meta name="og:image" content="./public/images/screenshot.png">
-    <meta name="og:url" content="http://again.nl">
-    <meta name="og:site_name" content="AGAIN | Cloud, Commerce, Company">
+    <meta name="og:title" content="LAKRAN VMS Services">
+    <meta name="og:description" content="Stretch your flex!">
+    <meta name="og:image" content="lakran-vms-services-logo.png">
+    <meta name="og:url" content="http://lakranvmsservices.com">
+    <meta name="og:site_name" content="LAKRAN VMS Services">
     <meta name="fb:admins" content="184172875337875">
     <meta name="og:type" content="website">
 </head>
